New route to activate and deactivate city monitoring
